--- a/libs/angular-components/global-nav/src/components/sidenav/sidenav.component.scss
+++ b/libs/angular-components/global-nav/src/components/sidenav/sidenav.component.scss
@@ -1,6 +1,3 @@
-$purple-light-color: #ede9fa;
-$purple-gray-color: #f5f5f5;
-
 :host {
   display: flex;
   flex-direction: column;
@@ -43,13 +40,13 @@ $purple-gray-color: #f5f5f5;
     }
 
     .uxg-list-item-selected.mat-mdc-list-item-interactive::after {
-      background: $purple-light-color;
-      opacity: 1;
+      background: var(--fds-primary);
+      opacity: 0.1;
     }
 
     .mat-mdc-list-item:hover.mat-mdc-list-item-interactive::after {
-      background: $purple-gray-color;
-      opacity: 1;
+      background: var(--fds-primary);
+      opacity: 0.03;
     }
   }
 }
