--- a/apps/angular-test-app/src/app/components/filter-panel-demo/filter-panel-demo.component.html
+++ b/apps/angular-test-app/src/app/components/filter-panel-demo/filter-panel-demo.component.html
@@ -188,11 +188,11 @@ and one using <code>uxg-filter-tags</code> component.
       <td>Description</td>
     </tr>
     <tr>
-      <td>@Input()<br />datasource:TreeNode[]</td>
+      <td>&#64;Input()<br />datasource:TreeNode[]</td>
       <td>An array of tree node.</td>
     </tr>
     <tr>
-      <td>@Output()<br />change: EventEmitter&lt;any&gt;</td>
+      <td>&#64;Output()<br />change: EventEmitter&lt;any&gt;</td>
       <td>Event emitted when the tree state change.</td>
     </tr>
   </tbody>
@@ -258,11 +258,11 @@ and one using <code>uxg-filter-tags</code> component.
       <td>Description</td>
     </tr>
     <tr>
-      <td>@Input()<br />datasource:string[]</td>
+      <td>&#64;Input()<br />datasource:string[]</td>
       <td>An array of strings.</td>
     </tr>
     <tr>
-      <td>@Output()<br />changes: EventEmitter&lt;any&gt;</td>
+      <td>&#64;Output()<br />changes: EventEmitter&lt;any&gt;</td>
       <td>Event emitted when items are added or removed from the list of selected items.</td>
     </tr>
   </tbody>
