--- a/apps/angular-test-app/src/app/components/global-nav-demo/global-nav-demo.component.html
+++ b/apps/angular-test-app/src/app/components/global-nav-demo/global-nav-demo.component.html
@@ -43,7 +43,7 @@
     <div class="uxg-avatar-hero-block">
       <div class="uxg-avatar" large>RH</div>
       <h6 class="uxg-h6">Raya Hristova</h6>
-      <span class="uxg-caption">raya.hristova@finastra.com</span>
+      <span class="uxg-caption">raya.hristova&#64;finastra.com</span>
     </div>
   </div>
   <mat-divider></mat-divider>
