--- a/apps/angular-test-app/src/app/components/video-thumbnail/video-thumbnail.component.html
+++ b/apps/angular-test-app/src/app/components/video-thumbnail/video-thumbnail.component.html
@@ -31,7 +31,7 @@
   <li>
     <p>
       Include the theme in your app's styles.scss
-      <code> @include uxg-video-thumbnail($theme); </code>
+      <code> &#64;include uxg-video-thumbnail($theme); </code>
     </p>
   </li>
 </ul>
@@ -48,7 +48,7 @@
     </tr>
     <tr>
       <td>video</td>
-      <td>&#123;thumbail: string, alt: string, url: string}</td>
+      <td>&#123;thumbail: string, alt: string, url: string&#125;</td>
       <td>-</td>
     </tr>
   </tbody>
@@ -65,7 +65,7 @@
     </tr>
     <tr>
       <td>videoClick</td>
-      <td>&#123; value: Video; $event: MouseEvent; }</td>
+      <td>&#123; value: Video; $event: MouseEvent; &#125;</td>
     </tr>
   </tbody>
 </table>
