--- a/apps/angular-test-app/src/app/components/expandable-table-demo/expandable-table-demo.component.html
+++ b/apps/angular-test-app/src/app/components/expandable-table-demo/expandable-table-demo.component.html
@@ -1,7 +1,13 @@
 <h2>Expandable Table</h2>
 <div class="demonstration">
-  <uxg-expandable-table [dataSource]="dataSource" [columns]="columns" [groupByKey]="groupByKey"
-    [selectable]="selectable" (selectionChange)="onSelectionChange($event)" [subtitle]="'Optional subtitle'">
+  <uxg-expandable-table
+    [dataSource]="dataSource"
+    [columns]="columns"
+    [groupByKey]="groupByKey"
+    [selectable]="selectable"
+    (selectionChange)="onSelectionChange($event)"
+    [subtitle]="'Optional subtitle'"
+  >
     <ng-template #expandableTableSubtitleTemplate let-row="row" let-subtitle="subtitle">
       {{ subtitle }}
     </ng-template>
@@ -14,8 +20,12 @@
     </ng-template>
 
     <ng-template #expandableHeaderButtonsTemplate let-row="row" let-emiter="emiter">
-      <button mat-icon-button title="Optional Header Button" (click)="emiter.emit(row); $event.stopPropagation()"
-        class="optional-header-button">
+      <button
+        mat-icon-button
+        title="Optional Header Button"
+        (click)="emiter.emit(row); $event.stopPropagation()"
+        class="optional-header-button"
+      >
         <mat-icon>description</mat-icon>
       </button>
     </ng-template>
