--- a/apps/angular-test-app/src/app/components/filter-panel-demo/filter-panel-demo.component.scss
+++ b/apps/angular-test-app/src/app/components/filter-panel-demo/filter-panel-demo.component.scss
@@ -7,13 +7,15 @@
 .filter-panel-container {
   height: 100%;
   border: 1px solid rgba(0, 0, 0, 0.04);
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.24), 0 0 2px rgba(0, 0, 0, 0.12);
+  box-shadow:
+    0 2px 2px rgba(0, 0, 0, 0.24),
+    0 0 2px rgba(0, 0, 0, 0.12);
 }
 
 .filter-panel-side {
   width: auto !important;
-  min-width: 352px;
-  max-width: 352px;
+  min-width: 370px;
+  max-width: 370px;
 }
 
 .filter-panel-side-header {
