--- a/libs/angular-theme/lib/form-field/_form-field.scss
+++ b/libs/angular-theme/lib/form-field/_form-field.scss
@@ -48,7 +48,7 @@ $mat-icon-button-dense-size: 40px;
 
   .mat-mdc-form-field-icon-prefix.mat-mdc-form-field-icon-prefix,
   .mat-mdc-form-field-icon-suffix.mat-mdc-form-field-icon-suffix {
-    top: -0.1em;
+    top: 2px;
   }
 
   .mat-form-field-outline {
