not harcoded name

--- a/apps/angular-test-app/src/app/components/global-nav-demo/global-nav-demo.component.html
+++ b/apps/angular-test-app/src/app/components/global-nav-demo/global-nav-demo.component.html
@@ -5,6 +5,7 @@
     [navigationNodes]="demoAppList"
     [appContent]="appContent"
     [navbarAction]="navbarAction"
+    [headerTitle]="headerTitle"
     (nodeChosen)="nodeChosen($event)"
     (brandAction)="brandAction($event)"
     (logout)="logout()"
