--- a/libs/angular-components/global-nav/src/global-nav.component.html
+++ b/libs/angular-components/global-nav/src/global-nav.component.html
@@ -5,6 +5,7 @@
       [shortName]="shortName"
       [navigationNodes]="navigationNodes"
       [activeRoute]="activeRoute"
+      [headerTitle]="headerTitle"
       (nodeChosen)="nodeChosen.emit($event)"
       (logout)="logout.emit()"
     ></uxg-sidenav>
