--- a/libs/angular-components/global-nav/src/components/sidenav/sidenav.component.html
+++ b/libs/angular-components/global-nav/src/components/sidenav/sidenav.component.html
@@ -6,7 +6,7 @@
 </div>
 
 <mat-nav-list class="uxg-nav-list-main uxg-nav-list">
-  <div matSubheader>Applications</div>
+  <div matSubheader>{{ headerTitle }}</div>
   <ng-container *ngFor="let node of navigationNodes">
     <a
       mat-list-item
