Revert "Merge branch 'main' into backport/angular17"
This reverts commit 732c6b41588d1c7a48e685f8f61c3938d310f6c6, reversing
changes made to 9c0f5a2463d3784dbbebbc3d5d90c16313734a48.

--- a/libs/angular-components/chart/src/_chart.theme.scss
+++ b/libs/angular-components/chart/src/_chart.theme.scss
@@ -7,9 +7,9 @@
   .chart-font-axis,
   .chart-font-legend {
     font: {
-      family: mat.m2-font-family($config, body-1);
-      size: mat.m2-font-size($config, body-1);
-      weight: mat.m2-font-weight($config, body-1);
+      family: mat.font-family($config, body-1);
+      size: mat.font-size($config, body-1);
+      weight: mat.font-weight($config, body-1);
     }
   }
 }
